# InsightXray

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  data_loader.py  evaluate.py  gitlog.txt  main.py  model.py  predict.py  pyproject.toml  smi.txt  status.txt  train.py
serving/: api.py
serving/frontend/: index.html  script.js  style.css
