[project]
name = "insightxray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch",
    "torchvision",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
